--- a/Module2/S21_SessionVaCookieTrongSpring/shopping_cart/src/main/resources/templates/product/shopping.html
+++ b/Module2/S21_SessionVaCookieTrongSpring/shopping_cart/src/main/resources/templates/product/shopping.html
@@ -13,9 +13,9 @@
 <table id="products" border="1" cellspacing="1" style="text-align: center">
     <thead>
     <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Price</th>
+        <th width="30px">ID</th>
+        <th width="150px">Name</th>
+        <th width="60px">Price</th>
         <th>Image</th>
         <th>View</th>
     </tr>
