--- a/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/common/index.html
+++ b/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/common/index.html
@@ -14,9 +14,35 @@
 
 <div class="row">
     <div class="column side" th:replace="/common/layout.html :: column-left"></div>
-    <div class="column middle" th:replace="/common/layout.html :: column-middle"></div>
+    <div class="column middle">
+        <h3>Welcome to Furama Resort</h3><br>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias dolor, illo quisquam repellat ut
+            voluptatum?</p>
+        <p>A consectetur, eligendi esse neque nihil nisi nostrum, perferendis quos ratione sequi sint veritatis
+            voluptate!</p>
+        <p>Ad, alias asperiores, autem, distinctio eius necessitatibus nobis numquam perferendis quaerat quibusdam rem
+            tempora ut.</p>
+        <p>Amet dolorem facilis labore provident suscipit tempore velit voluptas, voluptatem! Expedita odio tempore
+            voluptate. Explicabo.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias nostrum pariatur perspiciatis tempore! Ad,
+            aperiam beatae dignissimos nobis repudiandae voluptate.</p>
+        <p>Accusantium atque deserunt fuga harum illum inventore iusto minus natus omnis perspiciatis quaerat repellat
+            reprehenderit tenetur, ullam unde veniam, voluptate?</p>
+        <p>Asperiores impedit perspiciatis quo voluptate. Asperiores aut error incidunt temporibus voluptate? Aperiam et
+            ex fuga laborum natus nihil perspiciatis voluptas.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa illo in itaque?</p>
+        <p>Deleniti dolorum incidunt inventore, iusto necessitatibus odit officia possimus recusandae tenetur
+            voluptate!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto atque, corporis cupiditate
+            exercitationem expedita id ipsa molestias nam saepe veritatis.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda beatae commodi consectetur corporis dicta
+            doloremque eius, illum obcaecati officiis quaerat quam quas, quibusdam quod repellat repudiandae sit sunt
+            totam veniam?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur.</p>
+
+    </div>
     <div class="column side" th:replace="/common/layout.html :: column-right"></div>
 </div>
-</body>
 <div class="footer" th:replace="/common/layout.html :: footer"></div>
+</body>
 </html>
