--- a/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/common/layout.html
+++ b/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/common/layout.html
@@ -35,17 +35,41 @@
             <li><a href="#">Customer</a>
                 <ul>
                     <li><a href="/add-customer">Add new</a></li>
-                    <li><a href="/view-customer">View</a></li>
+                    <li><a href="/list-customer">View list</a></li>
                     <li><a href="/edit-customer">Edit</a></li>
                     <li><a href="/remove-customer">Remove</a></li>
                 </ul>
             </li>
             <li><a href="#">Contract</a>
                 <ul>
-                    <li><a href="#">Add new</a></li>
-                    <li><a href="#">View</a></li>
+                    <li><a href="/add-contract">Add new</a></li>
+                    <li><a href="#">View list</a></li>
                     <li><a href="#">Edit</a></li>
                     <li><a href="#">Delete</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Staff</a>
+                <ul>
+                    <li><a href="/add-staff">Add new</a></li>
+                    <li><a href="#">View list</a></li>
+                    <li><a href="#">Edit</a></li>
+                    <li><a href="#">Remove</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Detail Contract</a>
+                <ul>
+                    <li><a href="/add-detail-contract">Add new</a></li>
+                    <li><a href="#">View list</a></li>
+                    <li><a href="#">Edit</a></li>
+                    <li><a href="#">Delete</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Service</a>
+                <ul>
+                    <li><a href="/add-service">Add new</a></li>
+                    <li><a href="#">View list</a></li>
+                    <li><a href="#">Edit</a></li>
+                    <li><a href="#">Remove</a></li>
                 </ul>
             </li>
         </ul>
