--- a/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/customer/remove.html
+++ b/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/customer/remove.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Remove customer</title>
+    <title>Remove Customer</title>
     <th:block th:replace="/common/layout.html :: style"></th:block>
 </head>
 <body>
@@ -15,7 +15,7 @@
 <div class="row">
     <div class="column side" th:replace="/common/layout.html :: column-left"></div>
     <div class="column middle">
-        <h3>Remove customer</h3><br>
+        <h3>Remove Customer</h3><br>
 
     </div>
     <div class="column side" th:replace="/common/layout.html :: column-right"></div>
